--- a/cloudflare2020-jainam-soni/wrangler.toml
+++ b/cloudflare2020-jainam-soni/wrangler.toml
@@ -1,5 +1,5 @@
 name = "cloudflare2020-jainam-soni"
-type = "javascript"
+type = "webpack"
 account_id = "48b7be5dcbdfdccc7e11b6600eb36c8c"
 workers_dev = true
 route = ""
